Versión actualizada del proyecto Parking BNB con mejoras en Home y AuthContext

--- a/parkingbnb (4)/parkingbnb/src/main/resources/application.properties
+++ b/parkingbnb (4)/parkingbnb/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 #  Oracle
 spring.datasource.url=jdbc:oracle:thin:@//www.portalacademico.cl:49161/xe
 spring.datasource.username=apex_us_dsy_08_binary
-spring.datasource.password=macarena
+spring.datasource.password=macarena1
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.datasource.hikari.maximum-pool-size=2
