--- a/package.json
+++ b/package.json
@@ -1,14 +1,37 @@
 {
+  "name": "parkingbnb-frontend",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
+    "react-icons": "^4.10.1",
     "@react-google-maps/api": "^2.20.6",
     "leaflet": "^1.9.4",
     "react-datepicker": "^8.4.0",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.6.2"
+    "axios": "^1.4.0",
+    "framer-motion": "^10.16.4",
+    "@stripe/stripe-js": "^2.1.0",
+    "@mui/material": "^5.14.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.0"
   },
   "devDependencies": {
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.4",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "vite": "^5.0.8"
   }
 }
